--- a/modules/products/client/views/products-manage.client.view.html
+++ b/modules/products/client/views/products-manage.client.view.html
@@ -1,42 +1,53 @@
 <section>
   <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-lg-10">
+    <div class="col-lg-12">
       <h2>Manage Books:</h2>
     </div>
-    <div class="col-lg-2">
+    <div class="col-lg-12" align="right">
+      <button class="btn btn-info btn-xs" data-ui-sref="products.create()">Add Product</button>
+      <button class="btn btn-default btn-xs" ng-click="productsTable.filter({})">Clear Filter</button>
     </div>
   </div>
   <div class="wrapper wrapper-content animated fadeInRight">
-      <table ng-table="productsTable" class="table table-condensed table-striped" show-filter="true">
-   <tr ng-repeat="product in data">
-       <td data-title="'Picture'" >
-           <img ng-src="{{product.imageUrl}}" alt="{{product.title}}"  class="user-profile-picture">
-       </td>
-       <td data-title="'Title'" sortable="'title'" filter="{ 'title': 'text' }">
-           {{product.title}}
-       </td>
-       <td data-title="'Author'" sortable="'author'" filter="{ 'author': 'text' }">
-           {{product.author}}
-       </td>
-       <td data-title="'Category'" sortable="'category'" filter="{ 'category': 'text' }">
-           {{product.category}}
-       </td>
-       <td data-title="'Description'" filter="{ 'category': 'text' }">
-           {{product.description.substr(0,200)}}<span ng-show="{{product.description.length > 200}}"> ...</span>
-       </td>
-       <td data-title="'Price'" sortable="'price'" filter="{ 'price': 'number' }" align="right">
-           {{product.price}}
-       </td>
-       <td data-title="'Stock'" sortable="'stock'" filter="{ 'stock': 'number' }" align="right">
-           {{product.stock}}
-       </td>
-       <td data-title="'Action'" >
-         <button class="btn btn-default btn-xs" style="width:70px" data-ui-sref="products.view({ productId: product._id })">View</button>
-         <br/>
-         <button class="btn btn-warning btn-xs" style="width:70px" data-ui-sref="products.edit({ productId: product._id })">Edit</button>
-
-       </td>
-   </tr>
- </table>
- </div>
+    <table ng-table="productsTable" class="table table-condensed table-striped" show-filter="true">
+      <tr ng-repeat-start="product in data">
+        <td data-title="'Picture'" rowspan="2" >
+          <img ng-src="{{product.imageUrl}}" alt="{{product.title}}"  class="user-profile-picture">
+        </td>
+        <td data-title="'Title'" sortable="'title'" filter="{ 'title': 'text' }">
+          {{product.title}}
+        </td>
+        <td data-title="'Author'" sortable="'author'" filter="{ 'author': 'text' }">
+          {{product.author}}
+        </td>
+        <td data-title="'Category'" sortable="'category'" filter="{ 'category': 'text' }">
+          {{product.category}}
+        </td>
+        <td data-title="'Price'" sortable="'price'" filter="{ 'price': 'number' }" align="right">
+          ${{product.price}}
+        </td>
+        <td data-title="'Stock'" sortable="'stock'" filter="{ 'stock': 'number' }" align="right">
+          {{product.stock}}
+        </td>
+        <td data-title="'Status'" sortable="'status'" filter="{ 'status': 'select' }" filter-data="[{ id: 'Active', title: 'Active'}, { id: 'Inactive', title: 'Inactive'}]">
+          {{product.status}}
+        </td>
+        <td data-title="'Action'">
+          <button class="btn btn-default btn-xs" style="width:70px" data-ui-sref="products.view({ productId: product._id })">View</button>
+          <br/>
+          <button class="btn btn-warning btn-xs" style="width:70px" data-ui-sref="products.edit({ productId: product._id })">Edit</button>
+        </td>
+      </tr>
+      <tr ng-repeat-end>
+        <td data-title="'Description'" colspan="7" ng-hide="isMore" ng-click="isMore=1">
+          Description: <br/>
+          {{product.description.substr(0,200)}}<span ng-show="{{product.description.length > 200}}"> ...</span>
+        </td>
+        <td data-title="'Description'" colspan="7" ng-show="isMore" ng-click="isMore=0">
+          Description: <br/>
+          {{product.description}}
+        </td>
+      </tr>
+    </table>
+  </div>
 </section>
